environments/demo/apps/non-active/httpbin-vs-private.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs-intranet-http
  namespace: gloo-system-private
  labels:
    gateway-type: private
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system-private
