environments/demo/apps/non-active/httpbin-vs-public.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs-public-http
  namespace: gloo-system-public
  labels:
    gateway-type: public
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name:  httpbin-httpbin-8000
            namespace: gloo-system-public
